--- a/style.css
+++ b/style.css
@@ -18,58 +18,43 @@
     font-style: normal;
   }
 
-
-  /* makes sizing simpler */
-  
   *,
   *::before,
   *::after {
     box-sizing: border-box;
   }
   
-  /* remove default spacing */
-  /* force styling of type through styling, rather than elements */
-  
+
   * {
     margin: 0;
     padding: 0;
     font: inherit;
   }
   
-  /* dark mode user-agent-styles */
-  
-  html {
-    color-scheme: dark light;
-  }
-  
-  /* min body height */
-  
   body {
+    position: relative;
     min-height: 100vh;
+    display: grid;
+    place-items: center;  
     font-size: 16px;
     font-family: 'Work Sans', sans-serif;
     background-color: var(--light-pink);
+    background-image: url(/assets/images/background-pattern-desktop.svg);
+    background-repeat: no-repeat;
+    background-size: contain;
   }
-  
-  /* responsive images/videos */
+
   img,
-  picture,
-  svg,
-  video {
+  picture {
     display: block;
     max-width: 100%;
   }
 
-
 .accordion {
     max-width: 40rem;
-    margin-inline: auto;
     padding: 2rem;
     background-color: var(--white);
     border-radius: 20px;
-    margin-top: -50px;
-    z-index: 2;
-    position: relative;
     box-shadow: 2px 2px 40px 2px hsl(0 0% 0% / 0.4);
 }
 
@@ -115,6 +100,15 @@ button {
 .acc-content > p {
   overflow: hidden;
 }
-.acc-content[data-acc-hidden="false"]{
+.acc-content[aria-hidden="false"]{
   grid-template-rows: 1fr;
+}
+
+@media (width <= 768px ) {
+  body {
+    background-image: url(/assets/images/background-pattern-mobile.svg);
+  }
+  .accordion {
+    margin-inline: 1rem;
+  }
 }
