--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@ hr {
 .acc-content > p {
   overflow: hidden;
 }
-.acc-content[aria-expanded="true"]{
+.acc-content[aria-hidden="false"]{
   grid-template-rows: 1fr;
   padding-top: 1.5rem;
 }
