--- a/style.css
+++ b/style.css
@@ -70,12 +70,6 @@ h1 {
   aspect-ratio: 1;
 }
 
-button {
-    border: none;
-    background-color: inherit;
-    width: 100%;
-}
-
 hr {
   background-color: var(--light-pink);
   height: 1px;
@@ -101,6 +95,7 @@ hr {
   grid-template-rows: 0fr;
   transition: all 300ms ease-in-out;
   color: var(--grayish-purple);
+  line-height: 1.5;
 }
 .acc-content > p {
   overflow: hidden;
